--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,41 @@
-<%= form_with model:@book, url:'', local:true do |f| %>
-    <!-- 一覧表示 -->
+<%= form_with model:@book, url:'/books', local:true do |f| %>
+
+    <div class="notifications">
+        <% flash.each do |message_type, message| %>
+            <%= message %>
+        <% end %>
+    </div>
+   
+
     <h1>Books</h1>
+
+    <!-- 一覧表示 -->
+    <table  style="table-layout: fixed;">
+
+        <tr>
+            <th>Title</th>
+            <th>Body</th>
+            <th colspan="3"></th>
+        </tr>
+
+
+        <% @books.each do |book| %>
+            <tr>
+                <td><%= book.title %></td>
+                <td><%= book.body %></td>
+                <!--<td><a class="show" href="/books/">Show</a></td>-->
+                <td><%= link_to "Show", "/books/#{book.id}" %></td>
+                <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
+                <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+ 
+            </tr>
+        <% end %>
+
+
+    </table>
+
+
+
 
 
 
@@ -16,9 +51,8 @@
         <div>
             <%= f.submit 'Create Book' %>
         </div>
-        
-
     </div>
+
 
 
 
