--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model:@book, url:'/books', local:true do |f| %>
+
+
 
     <div class="notifications">
         <% flash.each do |message_type, message| %>
@@ -10,7 +11,7 @@
     <h1>Books</h1>
 
     <!-- 一覧表示 -->
-    <table  style="table-layout: fixed;">
+    <table style="table-layout: fixed;">
 
         <tr>
             <th>Title</th>
@@ -27,36 +28,38 @@
                 <td><%= link_to "Show", "/books/#{book.id}" %></td>
                 <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
                 <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
- 
             </tr>
         <% end %>
 
 
     </table>
 
-
-
-
+    <div class="index-alert">
+        <% if @book.errors.any? %>
+            <!--<%= @book.errors.count %>件のエラーが発生しました-->
+            <% @book.errors.full_messages.each do |message| %>
+                <%= message %>
+            <% end %>
+        <% end %>
+    </div>
+    
+    
 
 
 
     <!-- 新規投稿 -->
-    <div class="new-book">
-        <h2>New book</h2>
-
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Body</p>
-        <%= f.text_area :body %>
-        <div>
-            <%= f.submit 'Create Book' %>
+    <%= form_with model:@book, url:'/books', local:true do |f| %>
+        <div class="new-book">
+            <h2>New book</h2>
+            <p>Title</p>
+            <%= f.text_field :title %>
+            <p>Body</p>
+            <%= f.text_area :body %>
+            <div>
+                <%= f.submit 'Create Book' %>
+            </div>
         </div>
-    </div>
-
-
-
-
-<% end %>
+    <% end %>
 
 
 
