--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,11 @@
 <h1>新規投稿</h1>
+    <% if @book.errors.any? %>
+        <%= @book.errors.count %>件のエラーが発生しました
+        <% @book.errors.full_messages.each do |message| %>
+            <%= message %>
+        <% end %>
+    <% end %>
+
 <!-- form_with部分 -->
 <%= form_with model: @list, url:'/todolists', local:true do |f| %>
   <h4>タイトル</h4>
