--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,13 +7,13 @@
   
   <div class="alert">
         <% if @book.errors.any? %>
-            <!--<%= @book.errors.count %>件のエラーが発生しました-->
+            
+            <%= @book.errors.count %> errors prohibited this book from being saved:<br>
             <% @book.errors.full_messages.each do |message| %>
-                <%= message %>
+                ・<%= message %><br>
             <% end %>
         <% end %>
     </div>
-  
   
   
   
@@ -30,7 +30,7 @@
   
   
   <div class="buttons">
-  <%= link_to "Show", "/books/#{@book.id}/show" %>
+  <%= link_to "Show", "/books/#{@book.id}" %>
   |
   <%= link_to "Back", "/books" %>
 </div>
