--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -34,11 +34,12 @@
 
     </table>
 
-    <div class="index-alert">
+    <div class="alert">
         <% if @book.errors.any? %>
-            <!--<%= @book.errors.count %>件のエラーが発生しました-->
+            
+            <%= @book.errors.count %> errors prohibited this book from being saved:<br>
             <% @book.errors.full_messages.each do |message| %>
-                <%= message %>
+                ・<%= message %><br>
             <% end %>
         <% end %>
     </div>
